--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 android {
-    namespace "Nepmods.Tester"
+    namespace = "Nepmods.Tester"
     compileSdk 36
 
     defaultConfig {
@@ -39,13 +39,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-            signingConfig signingConfigs.release
+            signingConfig = signingConfigs.release
             debuggable false
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-            signingConfig signingConfigs.debug
+            signingConfig = signingConfigs.debug
             debuggable true
         }
     }
