--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -4,7 +4,7 @@ permissions:
 on:
   pull_request:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
@@ -29,7 +29,13 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assemble${{ matrix.build_type }}
+        run: ./gradlew assemble${{ matrix.build_type }} --warning-mode all
+      - name: Upload Gradle Problem Report
+        uses: actions/upload-artifact@v5
+        with:
+          name: gradle-problem-report
+          path: build/reports/problems/
+          if-no-files-found: warn
 
       - name: Upload APK
         uses: actions/upload-artifact@v5
