--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,6 +1,7 @@
 name: NepmodsTester Build
 permissions:
   contents: write
+
 on:
   pull_request:
     branches:
@@ -30,10 +31,11 @@ jobs:
 
       - name: Build APK
         run: ./gradlew assemble${{ matrix.build_type }} --warning-mode all
+
       - name: Upload Gradle Problem Report
         uses: actions/upload-artifact@v5
         with:
-          name: gradle-problem-report
+          name: gradle-problem-report-${{ matrix.build_type }}-${{ github.run_id }}
           path: build/reports/problems/
           if-no-files-found: warn
 
