--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,5 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+  //  implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
