--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        build_type: [debug, release]
+        build_type: [Debug, Release]  # Use capitalized to match Gradle tasks
 
     steps:
       - name: Checkout repository
@@ -26,8 +26,13 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
-      - name: Make gradlew executable
+      - name: Ensure gradlew is executable
         run: chmod +x ./gradlew
+
+      - name: Verify Gradle Wrapper
+        run: |
+          ./gradlew --version
+          ls -l gradle/wrapper/
 
       - name: Build APK
         run: ./gradlew assemble${{ matrix.build_type }} --warning-mode all
@@ -43,4 +48,4 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: NepmodsTester-apk-${{ matrix.build_type }}-${{ github.run_id }}
-          path: app/build/outputs/apk/${{ matrix.build_type }}/app-${{ matrix.build_type }}.apk
+          path: app/build/outputs/apk/${{ matrix.build_type | downcase }}/app-${{ matrix.build_type | downcase }}.apk
